change to section tags

--- a/personal_bio2.html
+++ b/personal_bio2.html
@@ -1,20 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+	<title>basic hmtl bio</title>
+	<h1>Personal Bio</h1>
 </head>
 
-<body>
-	<h1>Personal Bio</h1>
+<div>
+
+<!-- Section1: bio -->
+<section>
+
 	<h2>En-land Hsiao</h2>
-	<img src="me.jpg" height="400px" width="500px">
+	<img src="me.jpg" height="600px" width="500px">
 	<br>
 	<p>This is my personal bio page.  This is my first test file
 	</p>
+</section>
+
+<!-- Section2: Contact info -->
+<section>
 	<h2>Contact Info</h2>
 		<ul>
 			<li>Email: <a href="ehsiaoz@gmail.com">ehsiaoz@gmail.com</a></li>
-			<li>Github: <a href="www.espn.com"EnHsiao></a></li>
+			<li>Github: <a href="www.espn.com">coming soon</a></li>
 			<li>Portfolio: <a href="www.espn.com">coming soon</a></li>
-</body>
+		</ul>
+</section>
+
+</div>
+
 </html>
